# zrpc-cli

./: .gitignore  Cargo.toml  ReadMe.md  config.json
src/: commands.rs  config_loader.rs  grpc_client.rs  grpc_request_dsl.rs  json_domain.rs  logger.rs  main.rs  smart_parser.rs  text_coloring.rs  ui.rs  ui_states.rs  user_input.rs  util.rs
