[package]
name = "zrpc-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crossterm"]

[dependencies]
clap = "4.3.12"
config = "0.13.3"
log = "0.4.19"
serde = "1.0.177"
serde_json = "1.0.104"
tonic = "0.9"
tui = "0.19.0"
crossterm = { version = "0.25", optional = true }
unicode-width = "0.1.10"
