[package]
name = "zrpc-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.20"
config = "0.14.1"
log = "0.4.22"
serde = "1.0.214"
serde_json = "1.0.132"
tonic = "0.12.3"
colored = "2.0"
tonic-build = "0.12.3"
